<resources>
    //login
    <string name="app_name">SgroupMobile2025</string>
    <string name="welcome_title">Welcome Back</string>
    <string name="welcome_message">Welcome back we missed you</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="continue_with">Or continue with</string>
    <string name="or">or</string>
    <string name="forgor_pass">Forgot Password?</string>

    //signup
    <string name="signup_title">Get Started Free</string>
    <string name="signup_mess">Free Forever. No Credit Card Needed</string>
    <string name="email_address">Email Address</string>
    <string name="name">Your Name</string>

    <string name="product_search">Sneakers</string>
    <string name="product_count">25 products found</string>
    <string name="product_name">Nike</string>
    <string name="product_des">Run Star Hike Three Color Unisex Three Color Unisex</string>
    <string name="product_price">$85.5</string>
    <string name="product_detail_des">Eros, parturient sit posuere amet. Sed dignissim enim nulla egestas vitae id augue eleifend. Nam commodo scelerisque enim integer risus, non Eros, parturient sit posuere amet. Sed dignissim enim nulla egestas vitae id augue eleifend</string>
    <string name="add_to_card">ADD TO CARD</string>
    <string name="size">Size</string>
    <string name="product_size">38</string>
    <string name="read_more">Read more</string>
    <string name="gallery">Thư viện ảnh</string>
    <string name="message_dialog_request_permission">Cho phép truy cập thư viện ảnh?</string>
    <string name="request_permission">Yêu cầu quyền truy cập</string>
    <string name="contacts_title">Danh bạ</string>
    <string name="contacts_add_title">Add new contact</string>
    <string name="search_map">Seach places...</string>
    <string name="map_title">Map</string>
    <string name="map_detail_title">Place Detail</string>
    <string name="place_name">57, Chơn Tâm 5, Hòa Khánh</string>
    <string name="tag_address">Address</string>
    <string name="tag_location">Locationnnnn</string>
    <string name="lat">123,9875408754</string>
    <string name="lat_title">Latitude</string>
    <string name="lng_title">Longtitude</string>
    <string name="go">Go</string>
    <string name="tag_destination">To</string>
    <string name="tag_from">From</string>
    <string name="chat_title">Nhắn tin</string>
    <string name="chat_description">Send</string>
    <string name="chat_hint">Nhập tin nhắn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_title">Poster</string>


</resources>