<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_pink"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chat_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerChat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:clipToPadding="false"
        android:overScrollMode="never" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="horizontal"
        android:background="#FFFFFF"
        android:elevation="2dp">


        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:hint="@string/chat_hint"
            android:background="@drawable/bg_input_chat"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/btnSend"
            android:layout_width="@dimen/send_button_size"
            android:layout_height="@dimen/send_button_size"
            android:layout_marginStart="@dimen/margin_small"
            android:background="@drawable/bg_send_button"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/chat_description"
            app:tint="@android:color/white" />
    </LinearLayout>

</LinearLayout>
