<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:layout_marginStart="@dimen/margin_large"
        android:padding="5dp"
        android:src="@drawable/ic_back"
        android:background="@drawable/bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_user_bg"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginTop="-30dp"
        android:scaleType="fitEnd"
        android:src="@drawable/bgsignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:layout_marginTop="@dimen/margin_largest"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_zero"
        android:layout_marginTop="-100dp"
        android:src="@drawable/objectsbgsignup"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/signup_title"
        android:textColor="@color/white"
        android:textSize="@dimen/text_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user_bg" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_mess"
        android:textSize="@dimen/text_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/email_address"
        app:layout_constraintStart_toStartOf="@id/cv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_message" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_email"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/margin_small"
        app:cardBackgroundColor="#17ffffff"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/email_address"
            android:padding="@dimen/padding_small"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@id/cv_email"
        app:layout_constraintTop_toBottomOf="@id/cv_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_name"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/margin_small"
        app:cardBackgroundColor="#17ffffff"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/size_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/name"
            android:inputType="textPassword"
            android:padding="@dimen/padding_small" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/cv_email"
        app:layout_constraintTop_toBottomOf="@id/cv_name" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pw"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/margin_small"
        app:cardBackgroundColor="#17ffffff"
        app:cardCornerRadius="@dimen/radius"
        app:cardElevation="@dimen/size_zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pw">

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_key"
            android:drawableEnd="@drawable/ic_hint"
            android:drawablePadding="@dimen/padding_small"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/padding_small" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_submit"
        android:layout_width="@dimen/card_width"
        android:layout_height="@dimen/card_height"
        android:layout_marginTop="@dimen/margin_small"
        app:cardBackgroundColor="#9C3FE2"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_pw">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/text_mediumlarge"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_continue_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="@string/continue_with"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_submit"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_large"
        app:drawableStartCompat="@drawable/ic_google"
        app:layout_constraintEnd_toStartOf="@id/ic_fb"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue_with" />

    <TextView
        android:id="@+id/ic_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        app:drawableStartCompat="@drawable/ic_apple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue_with" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_small"
        app:drawableStartCompat="@drawable/ic_fb"
        app:layout_constraintStart_toEndOf="@id/ic_fb"
        app:layout_constraintTop_toBottomOf="@+id/tv_continue_with" />
</androidx.constraintlayout.widget.ConstraintLayout>